--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
     height: 100vh;
     width: 100vw;
     max-width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 label[for='menu-toggle'] > span::before {
